--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css
 ">
-  <title>Bootstrap demo</title>
+  <title>CSS ASSINGMENT 4</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
@@ -124,11 +124,7 @@
     </div>
   </div>
   <hr>
-
-
-
-
-  <!-- wedge sectionnnnn ends -->
+<!-- wedge sectionnnnn ends -->
 
 
 
@@ -273,7 +269,7 @@
 
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <img src="./images/Frame 1432.png" class="card-img-top mb-5" alt="...">
         <div class="card-body">
           <h5 class="card-title fw-bold">Highlites</h5>
@@ -283,7 +279,7 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect " style="width: 18rem;">
         <img src="./images/preview-story-widget.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title fw-bold">Slider</h5>
@@ -291,7 +287,7 @@
 
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <img src="./images/preview-story-widget (1).png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title fw-bold">Gallery</h5>
@@ -300,12 +296,7 @@
         </div>
       </div>
 
-
-
-
-
-
-    </div>
+   </div>
   </section>
   <!-- template secction ends -->
 
@@ -433,7 +424,7 @@
 
     <div class="d-flex justify-content-center flex-wrap gap-3 mt-4">
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Frame 1504.png" alt="">
           <h5 class="card-title fw-bold">Auto sync</h5>
@@ -444,7 +435,7 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Frame 1504 (1).png" alt="">
           <h5 class="card-title fw-bold">Responsive</h5>
@@ -454,7 +445,7 @@
 
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Frame 1504 (2).png" alt="">
           <h5 class="card-title fw-bold">follow button</h5>
@@ -464,7 +455,7 @@
 
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Frame 1504 (3).png" alt="">
           <h5 class="card-title fw-bold">Unlimited wedgets</h5>
@@ -479,7 +470,7 @@
 
     <div class="d-flex justify-content-center flex-wrap gap-3 mt-1">
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Frame 1504.png" alt="">
           <h5 class="card-title fw-bold">Locallization</h5>
@@ -487,10 +478,7 @@
             any website..</p>
         </div>
       </div>
-
-
-
-      <div class="card" style="width: 18rem;">
+     <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/FR-1.png" alt="">
           <h5 class="card-title fw-bold">Filers-pro</h5>
@@ -499,10 +487,7 @@
         </div>
       </div>
 
-
-
-
-      <div class="card" style="width: 18rem;">
+ <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/FR-2.png" alt="">
           <h5 class="card-title fw-bold">Analytics</h5>
@@ -513,7 +498,7 @@
       </div>
 
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/chart-line.png" alt="">
           <h5 class="card-title fw-bold">Custom CSS</h5>
@@ -564,7 +549,7 @@
     <p class="fw-bold text-center mt-2">Rated 4.8 by our customers on Facebook and Google</p>
     <div class="d-flex justify-content-center flex-wrap gap-3 mt-4">
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Rectangle 195.png" alt="">
           <p>Terry Dias</p>
@@ -578,7 +563,7 @@
       </div>
 
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/195-3.png" alt="">
           <p>James workman</p>
@@ -592,7 +577,7 @@
       </div>
 
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Rectangle 195 (1).png" alt="">
           <p>Ahmed vacaro</p>
@@ -606,7 +591,7 @@
       </div>
 
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Rectangle 195 (2).png" alt="">
           <p>Allison Culhane</p>
@@ -621,7 +606,7 @@
       </div>
     </div>
     <div class="d-flex justify-content-center flex-wrap gap-3 mt-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/195-3.png" alt="">
           <p></p>
@@ -635,7 +620,7 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
+      <div class="card effect " style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Rectangle 195 (1).png" alt="">
           <p> Thomas david</p>
@@ -647,7 +632,7 @@
 
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Rectangle 195 (2).png" alt="">
           <p> Jimy mark</p>
@@ -659,7 +644,7 @@
 
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card effect" style="width: 18rem;">
         <div class="card-body">
           <img src="./images/Rectangle 195.png" alt="">
           <p>Richard culhan</p>
@@ -689,10 +674,7 @@
   </section>
   <!-- ////features-2 ends///// -->
 
-
-
-
-  <!-- customers starts here ///////////////////////////////////-->
+ <!-- customers starts here ///////////////////////////////////-->
   <section class="customers pt-4">
 
     <div class="d-flex justify-content-center flex-wrap
